Set up with two models

--- a/BirdRecognizer/BirdRecognizer.csproj
+++ b/BirdRecognizer/BirdRecognizer.csproj
@@ -92,10 +92,11 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BirdRecognizerModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BirdRecognizerModel.cs" />
+    <Compile Include="CatOrDogModel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -105,10 +106,14 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\cat-test.jpg" />
     <Content Include="BirdRecognizerModel.onnx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="BirdRecognizer_TemporaryKey.pfx" />
+    <Content Include="CatOrDogModel.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\blue-tit-test.jpg" />
